--- a/Presentacion/Views/Reservas/Details.cshtml
+++ b/Presentacion/Views/Reservas/Details.cshtml
@@ -5,7 +5,8 @@
 }
 <div class="row">
     <div class="col-md-8 col-md-offset-2">
-        <legend class="text-center">Detalles de la reserva</legend>
+        <h3 class="text-center">Detalles de la reserva</h3>
+        <hr />
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
                 <dl class="dl-horizontal">
@@ -64,7 +65,7 @@
         </div>
         <div class="row">
             <p class="text-center">
-                @Html.BootstrapActionButton("Volver", "Index", null, new { @class = "btn-default" })
+                <button class="btn btn-default" onclick="javascript: window.history.back();">Volver</button>
                 @Html.BootstrapActionButton("Editar", "Edit", new { id = Model.Id }, new { @class = "btn-info" })
             </p>
         </div>
