Refactoring y testeo general

--- a/Presentacion/Views/Recursos/Buscar.cshtml
+++ b/Presentacion/Views/Recursos/Buscar.cshtml
@@ -82,7 +82,7 @@
                     <th>Código</th>
                     <th>Nombre</th>
                     <th>Descripción</th>
-                    <th>Accion</th>
+                    <th>Acción</th>
                 </tr>
             </table>
         </div>
@@ -134,7 +134,6 @@
 </script>
 
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/Scripts/recursos-utilities.js")
     @Styles.Render("~/Content/themes/base/css")
     @Scripts.Render("~/bundles/jqueryui")
