--- a/Presentacion/Views/Usuarios/Details.cshtml
+++ b/Presentacion/Views/Usuarios/Details.cshtml
@@ -5,9 +5,10 @@
 }
 <div class="row">
     <div class="col-md-8 col-md-offset-2">
-        <legend class="text-center">Detalles del usuario</legend>
+        <h3 class="text-center">Detalles del usuario</h3>
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
+                <hr />
                 <dl class="dl-horizontal">
 
                     <!-- Nombre de usuario -->
@@ -81,7 +82,7 @@
         <div class="row">
             <p class="text-center">
                 @Html.BootstrapActionButton("Volver", "Index", null, new { @class = "btn-default" })
-                @Html.BootstrapActionButton("Editar", "Edit", new { id = Model.id }, new { @class = "btn-info" })
+                @Html.BootstrapActionButton("Editar", "Edit", new { id = Model.Id }, new { @class = "btn-info" })
             </p>
         </div>
     </div>
