--- a/Presentacion/Views/Usuarios/Edit.cshtml
+++ b/Presentacion/Views/Usuarios/Edit.cshtml
@@ -14,7 +14,7 @@
     <div class="col-md-3 col-md-offset-3">
         @Html.AntiForgeryToken()
         @Html.ValidationSummary(true)
-        @Html.HiddenFor(model => model.id)
+        @Html.HiddenFor(model => model.Id)
 
         <div class="form-group">
             @Html.BootstrapLabelFor(model => model.Nombre)
