Commit de entrega

--- a/Presentacion/Views/Home/Index.cshtml
+++ b/Presentacion/Views/Home/Index.cshtml
@@ -1,4 +1,14 @@
 ﻿@{
     ViewBag.Title = "Reservas DCIC";
 }
-<h1>Reservas DCIC</h1>
+
+<div class="container">
+    
+    <!-- Jumbotron Header -->
+    <header class="jumbotron text-center">
+        <h1>¡Bienvenido a Reservas DCIC!</h1>
+        <p>Desde aquí podrá reservar fácilmente los recursos del Departamento de Ciencias e Ingeniería de Computación que necesite.</p>
+    </header>
+
+</div>
+<!-- /.container -->
